--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>assignment</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Features-Image.css">
-    <link rel="stylesheet" href="assets/css/Navbar-Centered-Links.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="Features-Image.css">
+    <link rel="stylesheet" href="Navbar-Centered-Links.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -29,9 +29,9 @@
     </nav>
     <div class="carousel slide" data-bs-ride="carousel" id="carousel-1">
         <div class="carousel-inner">
-            <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/photo-1473496169904-658ba7c44d8a.jpeg" alt="Slide Image"></div>
-            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/carousel4.jpg" alt="Slide Image"></div>
-            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/carousel3.webp" alt="Slide Image"></div>
+            <div class="carousel-item active"><img class="w-100 d-block" src="photo-1473496169904-658ba7c44d8a.jpeg" alt="Slide Image"></div>
+            <div class="carousel-item"><img class="w-100 d-block" src="carousel4.jpg" alt="Slide Image"></div>
+            <div class="carousel-item"><img class="w-100 d-block" src="carousel3.webp" alt="Slide Image"></div>
         </div>
         <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
         <ol class="carousel-indicators">
@@ -45,18 +45,18 @@
             <div class="col">
                 <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; This Italian icon is well known for its luxurious<br>and elaborate design contributions to the fashion sector. Prada’s sophisticated eyewear range has<br>been a leader in the industry for many years due to impeccable make, distinctive looks, and&nbsp;<br>timeless appeal.<br><br></p>
             </div>
-            <div class="col"><img class="rounded w-100 h-100 fit-cover" id="size" style="min-height: 300px;" src="assets/img/photo-1473496169904-658ba7c44d8a.jpeg"></div>
+            <div class="col"><img class="rounded w-100 h-100 fit-cover" id="size" style="min-height: 300px;" src="photo-1473496169904-658ba7c44d8a.jpeg"></div>
         </div>
     </div>
     <h1 id="head">New Arrivals</h1>
     <div class="card-group" id="space">
-        <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/casual5.jpg">
+        <div class="card"><img class="card-img-top w-100 d-block" src="casual5.jpg">
             <div class="card-body">
                 <h4 class="card-title">Casual Sunglasses</h4>
                 <p class="card-text">Rs.1399</p><button class="btn btn-primary" type="button">Add to cart</button>
             </div>
         </div>
-        <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/casual1.jpg">
+        <div class="card"><img class="card-img-top w-100 d-block" src="casual1.jpg">
             <div class="card-body">
                 <h4 class="card-title">Casual Sunglasses</h4>
                 <p class="card-text">Rs.1099</p><button class="btn btn-primary" type="button">Add to cart</button>
@@ -85,14 +85,14 @@
                 <footer class="text-center bg-dark"></footer>
             </div>
         </div>
-        <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/real3.webp">
+        <div class="card"><img class="card-img-top w-100 d-block" src="real3.webp">
             <div class="card-body">
                 <h4 class="card-title">Casual Sunglasses</h4>
                 <p class="card-text">Rs.1599</p><button class="btn btn-primary" type="button">Add to cart</button>
             </div>
         </div>
     </div>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="bootstrap.min.js"></script>
 </body>
 
 </html>
